--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -21,3 +21,9 @@ jwt:
   # 过期时间：7天 (1000 * 60 * 60 * 24 * 7)
   expiration: 604800000
   header: Authorization
+
+minio:
+  endpoint: http://${myip}:9000
+  access-key: minioadmin
+  secret-key: minio_password123
+  bucket-name: eink-images
