feat(video): 添加视频处理依赖，更新配置文件以支持文件上传

--- a/pom.xml
+++ b/pom.xml
@@ -129,7 +129,12 @@
             <scope>runtime</scope>
         </dependency>
         <!-- jwt  end-->
-
+<!--        视频处理-->
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>javacv-platform</artifactId>
+            <version>1.5.10</version>
+        </dependency>
     </dependencies>
 
     <build>
