feat: 实现完整的MQTT设备通信和内容推送系统
本次更新实现了与ESP32硬件设备的完整MQTT通信功能，包括设备管理、内容推送、播放队列管理和状态监控等核心功能。

## 主要功能模块

### 1. MQTT基础设施（阶段2）
- 实现 MqttConfig：配置MQTT客户端工厂、消息通道和适配器
- 实现 MqttService：提供MQTT消息发布服务
- 实现 MqttMessageListener：监听设备状态上报和心跳消息
- 定义MQTT消息模型：MqttCommandMessage、MqttStatusMessage、MqttHeartbeatMessage
- 修复MQTT消息接收中文乱码问题（使用UTF-8编码）

### 2. 设备管理（阶段3）
- 实现 DeviceController：设备CRUD接口（列表、详情、添加、更新、删除）
- 实现 DeviceService：设备业务逻辑，支持状态更新、心跳处理、当前内容查询
- 实现 DeviceMapper 和 Device 实体类
- 定义 DeviceVO 和 DeviceDTO 数据模型
- 支持游客查看在线设备，管理员查看所有设备

### 3. 内容推送（阶段4）
- 实现 PushController：内容推送接口（图片、视频、批量推送）
- 实现 PushService：推送业务逻辑，集成播放队列管理
- 实现 ContentPush 实体和 ContentPushMapper
- 定义推送相关DTO：PushImageDTO、PushVideoDTO、PushBatchDTO
- 实现游客配额管理（每日5个内容限制）
- 实现内容优先级和中断逻辑（游客内容优先于管理员内容）

### 4. 播放队列管理（阶段4）
- 实现 PlayQueueService：基于Redis的播放队列管理
  - 使用Sorted Set实现优先级队列
  - 使用String with TTL管理当前播放内容
  - 使用Hash和Set管理游客每日限额
- 实现 PlayScheduler：定时任务自动播放队列内容
- 实现队列查看和删除功能（仅管理员）
  - GET /api/device/{id}/queue：查看设备播放队列
  - DELETE /api/device/{id}/queue：批量删除队列项
- 定义 QueueItemVO 和 DeleteQueueItemsDTO

### 5. 基础数据层（阶段1）
- 定义枚举类：ContentType、DeviceStatus、PushStatus
- 实现实体类：Device、ContentPush

### 6. 基础设施
- 实现 RedisConfig：Redis连接和序列化配置
- 更新 GlobalExceptionHandler：添加MQTT异常处理
- 更新 WebConfig：支持URL尾随斜杠
- 更新 MinioService：修复Presigned URL解析问题
- 更新 application-dev.yml：添加MQTT、Redis、播放队列配置
- 更新 EInkBillboardBackendApplication：启用定时任务

### 7. API文档
- 新增完整的API文档（API文档.md）
- 包含所有接口说明、请求/响应示例、数据模型定义

## 技术特性

- 使用Spring Integration实现MQTT通信
- 使用Redis实现播放队列和游客限额管理
- 实现内容优先级机制（游客内容优先）
- 实现内容中断逻辑（游客内容可中断管理员内容）
- 支持Presigned URL动态生成
- 完整的异常处理和日志记录
- 权限控制（管理员/游客角色区分）

## 文件变更统计

- 新增文件：30+ 个Java类文件
- 修改文件：6 个现有文件
- 新增文档：API文档.md

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -14,6 +14,17 @@ spring:
     multipart:
       max-file-size: 50MB      # 单个文件最大大小
       max-request-size: 50MB
+  data:
+    redis:
+      host: 62.234.92.187
+      port: 6379
+      password: redis_password123
+      timeout: 3000ms
+      lettuce:
+        pool:
+          max-active: 8
+          max-idle: 8
+          min-idle: 0
 
 wechat:
   appid: ${wechat_appid}
@@ -31,3 +42,40 @@ minio:
   access-key: minioadmin
   secret-key: minio_password123
   bucket-name: eink-images
+  # 是否使用Presigned URL（如果bucket是私有的，必须设为true）
+  # 如果bucket是公开的，可以设为false直接使用永久URL
+  use-presigned-url: true
+  # Presigned URL的有效期（小时），默认2小时
+  # 建议设置为1-2小时，确保ESP32有足够时间下载
+  presigned-url-expiry-hours: 2
+
+mqtt:
+  # MQTT Broker地址（EMQX服务器）
+  broker-url: tcp://62.234.92.187:1883
+  # MQTT用户名
+  username: admin
+  # MQTT密码
+  password: emqx_password123
+  # MQTT客户端ID（唯一标识，使用随机值避免冲突）
+  client-id: eink-backend-${random.value}
+  # 默认QoS等级（0-最多一次，1-至少一次，2-仅一次）
+  qos: 1
+
+# 播放队列配置
+play-queue:
+  # 游客内容播放时长（秒）
+  visitor-play-duration: 120
+  # 管理员内容播放时长（秒，0表示不限制）
+  admin-play-duration: 0
+  # 游客每日最大播放数量
+  visitor-daily-limit: 5
+  # 播放轮询间隔（秒）
+  poll-interval: 30
+  # 提前切换时间（秒，在播放结束前多少秒开始切换）
+  switch-ahead-time: 10
+
+
+logging:
+  level:
+    root: info
+    com.stalab.e_ink_billboard_backend: debug
