feat(upload): 添加每日上传数量限制功能，游客上传图片和视频数量受限 修复代码中的字符串硬编码问题，改用枚举值

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -48,6 +48,12 @@ spring:
       # 连接超时时间（毫秒）
       connect-timeout: 5000ms
 
+# 上传限制配置
+upload:
+  daily-limit:
+    image: 20  # 游客每日图片上传上限
+    video: 5   # 游客每日视频上传上限
+
 # wx小程序开发
 wechat:
   appid: ${wechat_appid}
@@ -57,7 +63,7 @@ wechat:
 wx:
   mp:
     appId: ${wx_mp_appid}  # 公众号的AppID
-    secret: ${wx_mp_secret}  # 公众号的Secret
+    secret: ${wx_mp_secret}    # 公众号的Secret
     token: ${wx_mp_token}
     aes-key: ${wx_mp_aes_key}
 
